2008-06-27  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac: Post release bump to 0.7.7.

======== Release 0.7.6 ========================================================

2008-06-27  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac:
	* NEWS: Release 0.7.6.

2008-06-27  Neil Roberts  <neil@o-hand.com>

	Bug 993 - Underline colors are sometimes wrong

	* clutter/pango/pangoclutter-render.c: Fixed so that instead
	of trying to set the color in prepare_run it uses draw_glyphs
	to draw groups of glyphs and requests the color for each part
	from Pango.

2008-06-26  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c:
	(clutter_actor_set_min_width),
	(clutter_actor_set_min_height),
	(clutter_actor_set_natural_width),
	(clutter_actor_set_natural_height): Ignore any override of the
	minimum and natural size of the stage on backends that only
	support static stages.

	* clutter/clutter-stage.c (clutter_stage_allocate): Use the
	preferred size of the ClutterStage implementation instead of
	the display size.

	* clutter/clutter-backend.[ch]: Remove get_display_size() and
	clutter_backend_get_display_size().

	* clutter/eglnative/clutter-backend-egl.c:
	* clutter/fruity/clutter-backend-fruity.c:
	* clutter/osx/clutter-backend-osx.c:
	* clutter/sdl/clutter-backend-sdl.c:
	* clutter/win32/clutter-backend-win32.c:
	* clutter/x11/clutter-backend-x11.c: Remove get_display_size()
	implementations.

2008-06-26  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-shader.c (bind_glsl_shader): Verify that the
	vertex shader has been successfully compiled, like we do with
	the fragment shader.

2008-06-26  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/osx/clutter-backend-osx.c:
	(clutter_backend_osx_get_display_size): Fix the allocation pool
	macro name.

2008-06-26  Matthew Allum  <mallum@openedhand.com>

	* clutter/glx/clutter-glx-texture-pixmap.c:
	Move the gl extension probe into the regular object init() rather than